Create basic structure and style

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,1 +1,17 @@
 // Here you can add other styles
+
+a {
+  color: #255180;
+}
+
+.app-header {
+  background-image: linear-gradient(to top, #ECF4E0 1%, #FFF 50%);
+}
+
+.breadcrumb {
+  background-image: linear-gradient(to top, #CAE2AA 10%, #ECF4E0 92%);
+}
+
+.sidebar {
+  background-image: linear-gradient(to top, #CAE2AA 10%, #ECF4E0 92%);
+}
