--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,5 +3,9 @@
 @import "bootstrap/scss/variables";
 @import "bootstrap/scss/mixins";
 
-//$sidebar-color: $gray-800;
-//$sidebar-bg: $gray-200;
+$sidebar-nav-link-bg: #CAE2AA;
+$sidebar-nav-link-active-bg: #a2b588;
+$sidebar-nav-link-active-color: $breadcrumb-active-color;
+$sidebar-nav-dropdown-color: #255180;
+$sidebar-nav-link-active-icon-color: $sidebar-nav-dropdown-color;
+$sidebar-nav-link-hover-bg: #7EAD3B;
