Add basic form view to houses-add-edit component

--- a/src/app/views/houses/houses-list/houses-list.component.html
+++ b/src/app/views/houses/houses-list/houses-list.component.html
@@ -23,6 +23,13 @@
   <div class="card">
     <div class="card-header">
       List
+      <div class="card-header-actions">
+        <a [routerLink]="['/houses/new']">
+          <button class="btn btn-primary">
+            New
+          </button>
+        </a>
+      </div>
     </div>
     <div class="card-body">
       <table class="table">
@@ -68,7 +75,7 @@
           </td>
         </tr>
         <tr>
-          <td>Friderik Dávid</td>
+          <td>Friderik Dï¿½vid</td>
           <td>2012/01/21</td>
           <td>Staff</td>
           <td>
