--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,7 @@
 
 // Import styles
 @import "~@coreui/coreui/scss/coreui";
+@import "~@ng-select/ng-select/themes/default.theme.css";
 
 // If you want to add something do it here
 @import "custom";
