--- a/src/app/views/houses/houses-add-edit/houses-add-edit.component.html
+++ b/src/app/views/houses/houses-add-edit/houses-add-edit.component.html
@@ -40,7 +40,7 @@
           <div class="form-group row">
             <label class="col-md-3 col-form-label">Owner</label>
             <div class="col-md-9">
-              <input type="text" class="form-control" formControlName="manager" disabled>
+              <input type="text" class="form-control" formControlName="owner" disabled>
             </div>
           </div>
           <div class="form-group row">
