--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -7,8 +7,8 @@
             <div class="card p-4">
               <div class="card-body">
                 <alert *ngIf="loginError.show" [type]="'danger'" [dismissible]="true"
-                       (onClose)="loginError.show = false">{{ loginError.message }}</alert>
-                <div class="bg-warning" *ngIf="sessionExpired === true">The session has expired {{sessionExpired}}.
+                       (onClose)="onClose()">{{ loginError.message }}</alert>
+                <div class="bg-warning" *ngIf="sessionExpired">The session has expired {{sessionExpired}}.
                 </div>
                 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                   <h1>Login</h1>
