--- a/src/app/views/houses/houses-list/houses-list.component.scss
+++ b/src/app/views/houses/houses-list/houses-list.component.scss
@@ -21,4 +21,13 @@
     align-items: center;
     padding: 0.5rem;
   }
+
+  .dropdown-item:active {
+    background-color: #CAE2AA;
+  }
+
+  ::ng-deep .ngx-pagination {
+    padding: 0 !important;
+    text-align: center;
+  }
 }
