--- a/src/app/containers/framed-layout/framed-layout.component.html
+++ b/src/app/containers/framed-layout/framed-layout.component.html
@@ -1,8 +1,8 @@
 <app-header
   [navbarBrandRouterLink]="['/base/cards']"
   [fixed]="true"
-  [navbarBrandFull]="{src: 'assets/img/brand/logo.png', width: 65, height: 25, alt: 'Rent.cu Logo'}"
-  [navbarBrandMinimized]="{src: 'assets/img/brand/sygnet.svg', width: 30, height: 30, alt: 'CoreUI Logo'}"
+  [navbarBrandFull]="{src: 'assets/img/brand/logo.png', width: 60, height: 25, alt: 'Rent.cu Logo'}"
+  [navbarBrandMinimized]="{src: 'assets/img/brand/logo.png', width: 30, height: 12.5, alt: 'Rent.cu Logo'}"
   [sidebarToggler]="'lg'"
   [asideMenuToggler]="false">
   <ul class="nav navbar-nav d-md-down-none">
