--- a/src/app/views/houses/houses-add-edit/houses-add-edit.component.html
+++ b/src/app/views/houses/houses-add-edit/houses-add-edit.component.html
@@ -1,60 +1,71 @@
-<alert *ngIf="alert.show" [type]="alert.type" [dismissible]="true" (onClose)="alert.show = false">{{ alert.msg }}</alert>
+<alert *ngIf="alert.show" [type]="alert.type" [dismissible]="true"
+       (onClose)="alert.show = false">{{ alert.msg }}</alert>
+
 <div class="row">
-  <div class="col-md-12">
-    <div class="card">
-      <div class="card-header">
-        House
-      </div>
-      <form [formGroup]="houseForm" (ngSubmit)="onSubmit()">
-        <div class="card-body">
-          <div class="form-group row">
-            <label class="col-md-3 col-form-label">Name</label>
-            <div class="col-md-9">
-              <input type="text" class="form-control" formControlName="id" hidden>
-              <div
-                class="bg-danger"
-                *ngIf="houseForm.get('name').hasError('required') && houseForm.get('name').touched">
-                Username required
+  <div class="col-md-2">
+    <div class="owner-card">
+      <app-owner-card></app-owner-card>
+    </div>
+  </div>
+  <div class="col-md-10">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="card">
+          <div class="card-header">
+            House
+          </div>
+          <form [formGroup]="houseForm" (ngSubmit)="onSubmit()">
+            <div class="card-body">
+              <div class="form-group row">
+                <label class="col-md-3 col-form-label">Name</label>
+                <div class="col-md-9">
+                  <input type="text" class="form-control" formControlName="id" hidden>
+                  <div
+                    class="bg-danger"
+                    *ngIf="houseForm.get('name').hasError('required') && houseForm.get('name').touched">
+                    Username required
+                  </div>
+                  <input type="text" class="form-control" formControlName="name">
+                </div>
               </div>
-              <input type="text" class="form-control" formControlName="name">
+              <div class="form-group row">
+                <label class="col-md-3 col-form-label">Address</label>
+                <div class="col-md-9">
+                  <input type="text" class="form-control" formControlName="address">
+                </div>
+              </div>
+              <div class="form-group row">
+                <label class="col-md-3 col-form-label">Phones</label>
+                <div class="col-md-9">
+                  <input type="text" class="form-control" formControlName="phones">
+                </div>
+              </div>
+              <div class="form-group row">
+                <label class="col-md-3 col-form-label">Rooms</label>
+                <div class="col-md-9">
+                  <input type="number" class="form-control" formControlName="rooms">
+                </div>
+              </div>
+              <div class="form-group row">
+                <label class="col-md-3 col-form-label">Owner</label>
+                <div class="col-md-9">
+                  <input type="text" class="form-control" formControlName="owner" disabled>
+                </div>
+              </div>
+              <div class="form-group row">
+                <label class="col-md-3 col-form-label">Description</label>
+                <div class="col-md-9">
+                  <textarea class="form-control" formControlName="description"></textarea>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="form-group row">
-            <label class="col-md-3 col-form-label">Address</label>
-            <div class="col-md-9">
-              <input type="text" class="form-control" formControlName="address">
+            <div class="card-footer">
+              <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Submit</button>
+              <button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Reset</button>
             </div>
-          </div>
-          <div class="form-group row">
-            <label class="col-md-3 col-form-label">Phones</label>
-            <div class="col-md-9">
-              <input type="text" class="form-control" formControlName="phones">
-            </div>
-          </div>
-          <div class="form-group row">
-            <label class="col-md-3 col-form-label">Rooms</label>
-            <div class="col-md-9">
-              <input type="number" class="form-control" formControlName="rooms">
-            </div>
-          </div>
-          <div class="form-group row">
-            <label class="col-md-3 col-form-label">Owner</label>
-            <div class="col-md-9">
-              <input type="text" class="form-control" formControlName="owner" disabled>
-            </div>
-          </div>
-          <div class="form-group row">
-            <label class="col-md-3 col-form-label">Description</label>
-            <div class="col-md-9">
-              <textarea class="form-control" formControlName="description"></textarea>
-            </div>
-          </div>
+          </form>
         </div>
-        <div class="card-footer">
-          <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Submit</button>
-          <button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Reset</button>
-        </div>
-      </form>
+      </div>
     </div>
   </div>
 </div>
