--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,6 +4,9 @@
 // Import styles
 @import "~@coreui/coreui/scss/coreui";
 @import "~@ng-select/ng-select/themes/default.theme.css";
+@import "~ag-grid-community/dist/styles/ag-grid";
+@import "~ag-grid-community/dist/styles/ag-theme-balham";
+@import "~@ng-select/ng-select/themes/default.theme.css";
 
 // If you want to add something do it here
 @import "custom";
