--- a/src/app/views/modals/delete/delete.component.html
+++ b/src/app/views/modals/delete/delete.component.html
@@ -8,7 +8,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <p>Are you sure you want to delete the element? This action is irreversible.</p>
+        <p>Are you sure you want to delete these elements? This action is irreversible.</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" (click)="dangerModal.hide()">Cancel</button>
