--- a/src/app/components/core/framed-layout/framed-layout.component.html
+++ b/src/app/components/core/framed-layout/framed-layout.component.html
@@ -28,9 +28,19 @@
   <main class="main">
     <!-- Breadcrumb -->
     <!-- breaking change 'cui-breadcrumb' -->
-    <cui-breadcrumb>
-      <!-- Breadcrumb Menu-->
-    </cui-breadcrumb>
+<!--    <cui-breadcrumb #breadcrumbComponent>-->
+<!--      &lt;!&ndash; Breadcrumb Menu&ndash;&gt;-->
+<!--    </cui-breadcrumb>-->
+    <breadcrumb #parent>
+      <ol class="breadcrumb">
+        <ng-template ngFor let-route [ngForOf]="parent.breadcrumbs">
+          <li *ngIf="!route.terminal" class="breadcrumb-item">
+            <a href="" [routerLink]="[route.url]">{{ route.displayName }}</a>
+          </li>
+          <li *ngIf="route.terminal" class="breadcrumb-item active" aria-current="page">{{ route.displayName }}</li>
+        </ng-template>
+      </ol>
+    </breadcrumb>
     <div class="container-fluid">
       <router-outlet></router-outlet>
     </div><!-- /.container-fluid -->
