WIP: Paginate ag-grid

--- a/src/app/components/views/houses/houses-list/houses-list.component.html
+++ b/src/app/components/views/houses/houses-list/houses-list.component.html
@@ -51,7 +51,8 @@
             rowClass="row-class"
             [rowData]="housesObservable | async"
             [columnDefs]="columnDefs"
-            (rowSelected)="onRowSelected()">
+            (rowSelected)="onRowSelected()"
+            (gridReady)="onGridReady($event)">
           </ag-grid-angular>
         </div>
       </div>
